# homelab-k3s

./: .gitignore  Makefile  Makefile.live  README.md  Vagrantfile  pyproject.toml  requirements.txt
ansible/: cpu.yaml  filesystem.yaml  firmware.yaml  k3s.yaml  kubernetes.yaml  main.yaml  manpages.yaml  network.yaml  nomad.yaml  openssh.yaml  pacman.yaml  time.yaml  utilities.yaml
ansible/files/k3s/: k3s.service
ansible/files/kubernetes/kubeadm/: config.yaml  init.sh
ansible/files/nomad/: nomad.service
ansible/files/openssh/: sshd_config
ansible/templates/nomad/: nomad.hcl
deploy/arma3/: arma3.yaml
deploy/cert-manager/: cert-manager.yaml  issuers.yaml
deploy/ingress-nginx/: ingress-class.yaml  ingress-nginx.yaml  metrics.yaml  network-policy.yaml
deploy/longhorn/: longhorn.yaml
deploy/prometheus-operator/: alertmanager-alertmanager.yaml  alertmanager-ingress.yaml  alertmanager-serviceMonitor.yaml  grafana-config.yaml  grafana-dashboardDatasources.yaml  grafana-ingress.yaml  grafana-serviceMonitor.yaml  prometheus-adapter-deployment.yaml  prometheus-ingress.yaml  prometheus-prometheus.yaml  prometheus-serviceMonitor.yaml
deploy/teamspeak/: teamspeak.yaml
docs/: alertmanager.md  arma3.md  ingess-nginx.md  ingress-nginx.md  longhorn.md  teamspeak.md
hack/: kubeconfig.py
lab/: config.py  kubeconfig.py  main.py
src/: config.py  main.py
tests/: test_lab.py
